[package]
name = "calls"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[dependencies]
futures = "0.1"
parity-scale-codec = { version = "1.0", default-features = false, features = ["derive", "full"] }
substrate-subxt = { path = "../../substrate-subxt" }
node-runtime = { path = "../../node-template/runtime", package = "node-template-runtime" }
frame-system = { path = "../../substrate/frame/system" }
pallet-balances = { path = "../../substrate/frame/balances" }
pallet-indices = { path = "../../substrate/frame/indices" }
pallet-ibc = { path = "../frame/ibc" }
sp-core = { path = "../../substrate/primitives/core", package = "sp-core" }
