[package]
name = "calls"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive", "full"] }

frame-system = { path = "../../substrate/frame/system" }
node-runtime = { path = "../../node-template/runtime", package = "node-template-runtime" }
pallet-balances = { path = "../../substrate/frame/balances" }
pallet-ibc = { path = "../pallets/ibc" }
sp-core = { path = "../../substrate/primitives/core" }
sp-finality-grandpa = { path = "../../substrate/primitives/finality-grandpa" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
substrate-subxt = { path = "../../substrate-subxt" }
