[package]
name = "cli"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
hex = "0.4.0"
rand = "0.7.2"
futures = "0.3"
async-std = "1.4.0"
substrate-subxt = { path = "../../substrate-subxt" }
calls = { path = "../calls" }
sp-core = { path = "../../substrate/primitives/core" }
sp-keyring = { path = "../../substrate/primitives/keyring" }
node-runtime = { path = "../runtime", package = "node-template-runtime" }
