
[package]
name = "cli"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[dependencies]
async-std = "1.6.2"
clap = "2.33.0"
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive", "full"] }
hex = "0.4.0"
lazy_static = "1.4.0"
# rand = "0.7.2"

calls = { path = "../calls" }
sp-core = { path = "../../substrate/primitives/core" }
sp-finality-grandpa = { path = "../../substrate/primitives/finality-grandpa" }
sp-keyring = { path = "../../substrate/primitives/keyring" }
substrate-subxt = { path = "../../substrate-subxt" }
