[package]
name = "node-template"
version = "2.0.0-rc5"
authors = ["Anonymous"]
description = "A new FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.8.0-rc5", path = "../../substrate/client/cli", features = ["wasmtime"] }
sp-core = { version = "2.0.0-rc5", path = "../../substrate/primitives/core" }
sc-executor = { version = "0.8.0-rc5", path = "../../substrate/client/executor", features = ["wasmtime"] }
sc-service = { version = "0.8.0-rc5", path = "../../substrate/client/service", features = ["wasmtime"] }
sp-inherents = { version = "2.0.0-rc5", path = "../../substrate/primitives/inherents" }
sc-transaction-pool = { version = "2.0.0-rc5", path = "../../substrate/client/transaction-pool" }
sp-transaction-pool = { version = "2.0.0-rc5", path = "../../substrate/primitives/transaction-pool" }
sc-consensus-aura = { version = "0.8.0-rc5", path = "../../substrate/client/consensus/aura" }
sp-consensus-aura = { version = "0.8.0-rc5", path = "../../substrate/primitives/consensus/aura" }
sp-consensus = { version = "0.8.0-rc5", path = "../../substrate/primitives/consensus/common" }
sc-consensus = { version = "0.8.0-rc5", path = "../../substrate/client/consensus/common" }
sc-finality-grandpa = { version = "0.8.0-rc5", path = "../../substrate/client/finality-grandpa" }
sp-finality-grandpa = { version = "2.0.0-rc5", path = "../../substrate/primitives/finality-grandpa" }
sc-client-api = { version = "2.0.0-rc5", path = "../../substrate/client/api" }
sp-runtime = { version = "2.0.0-rc5", path = "../../substrate/primitives/runtime" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "14.0.3"
sc-rpc = { version = "2.0.0-rc5", path = "../../substrate/client/rpc" }
sp-api = { version = "2.0.0-rc5", path = "../../substrate/primitives/api" }
sc-rpc-api = { version = "0.8.0-rc5", path = "../../substrate/client/rpc-api" }
sp-blockchain = { version = "2.0.0-rc5", path = "../../substrate/primitives/blockchain" }
sp-block-builder = { version = "2.0.0-rc5", path = "../../substrate/primitives/block-builder" }
sc-basic-authorship = { version = "0.8.0-rc5", path = "../../substrate/client/basic-authorship" }
substrate-frame-rpc-system = { version = "2.0.0-rc5", path = "../../substrate/utils/frame/rpc/system" }
pallet-transaction-payment-rpc = { version = "2.0.0-rc5", path = "../../substrate/frame/transaction-payment/rpc/" }

node-template-runtime = { version = "2.0.0-rc5", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "2.0.0-rc5", path = "../../substrate/utils/build-script-utils" }
