[package]
name = "relayer"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
tokio = { version = "0.2", features = ["full"] }
url = "1.7"
futures = { version = "0.3.1", features = ["compat"] }
substrate-subxt = { path = "../../substrate-subxt" }
tokio-compat = { package = "tokio-compat", version = "0.1.0" }
calls = { path = "../calls" }
sp-keyring = { path = "../../substrate/primitives/keyring" }
sp-core = { path = "../../substrate/primitives/core" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-rpc = { path = "../../substrate/primitives/rpc" }
sp-storage = { path = "../../substrate/primitives/storage" }
system = { package = "frame-system", path = "../../substrate/frame/system" }
node-runtime = { path = "../runtime", package = "node-template-runtime" }
pallet-ibc = { path = "../frame/ibc" }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive", "full"] }
log = "0.4.0"
env_logger = "0.7.1"
