[package]
name = "relayer"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
url = "1.7"
futures = "0.3"
async-std = "1.4.0"
substrate-subxt = { path = "../../substrate-subxt" }
calls = { path = "../calls" }
sp-keyring = { path = "../../substrate/primitives/keyring" }
sp-core = { path = "../../substrate/primitives/core" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-rpc = { path = "../../substrate/primitives/rpc" }
sp-storage = { path = "../../substrate/primitives/storage" }
system = { package = "frame-system", path = "../../substrate/frame/system" }
node-runtime = { path = "../runtime", package = "node-template-runtime" }
pallet-ibc = { path = "../frame/ibc" }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive", "full"] }
log = "0.4.0"
env_logger = "0.7.1"
