[package]
name = "relayer"
version = "0.1.0"
authors = ["Yuanchao Sun <ys@cdot.network>"]
edition = "2018"

[dependencies]
async-std = "1.5.0"
clap = "2.33.0"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive", "full"] }
hex = "0.4.0"
log = "0.4.0"
serde = "1.0.101"
serde_derive = "1.0"

calls = { path = "../calls" }
env_logger = "0.7.1"
node-runtime = { path = "../runtime", package = "node-template-runtime" }
pallet-ibc = { path = "../pallets/ibc" }
sp-core = { path = "../../substrate/primitives/core" }
sp-finality-grandpa = { path = "../../substrate/primitives/finality-grandpa" }
sp-keyring = { path = "../../substrate/primitives/keyring" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-storage = { path = "../../substrate/primitives/storage" }
sp-trie = { path = "../../substrate/primitives/trie" }
substrate-subxt = { path = "../../substrate-subxt" }
system = { package = "frame-system", path = "../../substrate/frame/system" }
toml = "0.5"