[package]
name = "node-template-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
aura = { package = "pallet-aura", path = "../../substrate/frame/aura", default-features = false }
balances = { package = "pallet-balances", path = "../../substrate/frame/balances", default-features = false }
frame-support = { path = "../../substrate/frame/support", default-features = false }
grandpa = { package = "pallet-grandpa", path = "../../substrate/frame/grandpa", default-features = false }
indices = { package = "pallet-indices", path = "../../substrate/frame/indices", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", path = "../../substrate/frame/randomness-collective-flip", default-features = false }
sudo = { package = "pallet-sudo", path = "../../substrate/frame/sudo", default-features = false }
system = { package = "frame-system", path = "../../substrate/frame/system", default-features = false }
timestamp = { package = "pallet-timestamp", path = "../../substrate/frame/timestamp", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", path = "../../substrate/frame/transaction-payment", default-features = false }

codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
frame-executive = { path = "../../substrate/frame/executive", default-features = false }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { path = "../../substrate/primitives/api", default-features = false }
sp-block-builder = { path = "../../substrate/primitives/block-builder", default-features = false}
sp-consensus-aura = { path = "../../substrate/primitives/consensus/aura", default-features = false }
sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false}
sp-io = { path = "../../substrate/primitives/io", default-features = false }
sp-offchain = { path = "../../substrate/primitives/offchain", default-features = false }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
sp-session = { path = "../../substrate/primitives/session", default-features = false }
sp-std = { path = "../../substrate/primitives/std", default-features = false }
sp-transaction-pool = { path = "../../substrate/primitives/transaction-pool", default-features = false }
sp-version = { path = "../../substrate/primitives/version", default-features = false }
ibc = { package = "pallet-ibc", path = "../frame/ibc", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", path = "../../substrate/utils/wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"aura/std",
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"indices/std",
	"randomness-collective-flip/std",
	"safe-mix/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	"ibc/std",
]
