[package]
name = "node-template-runtime"
version = "2.0.0-rc5"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

pallet-aura = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/aura" }
pallet-balances = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/balances" }
frame-support = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/support" }
pallet-grandpa = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/grandpa" }
pallet-randomness-collective-flip = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/randomness-collective-flip" }
pallet-sudo = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/sudo" }
frame-system = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/system" }
pallet-timestamp = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/timestamp" }
pallet-transaction-payment = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/transaction-payment" }
frame-executive = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/executive" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/primitives/api" }
sp-block-builder = { path = "../../substrate/primitives/block-builder", default-features = false, version = "2.0.0-rc5"}
sp-consensus-aura = { version = "0.8.0-rc5", default-features = false, path = "../../substrate/primitives/consensus/aura" }
sp-core = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/primitives/core" }
sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false, version = "2.0.0-rc5"}
sp-offchain = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/primitives/offchain" }
sp-runtime = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/primitives/runtime" }
sp-session = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/primitives/session" }
sp-std = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/primitives/std" }
sp-transaction-pool = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/primitives/transaction-pool" }
sp-version = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/primitives/version" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/system/rpc/runtime-api/" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-rc5", default-features = false, path = "../../substrate/frame/transaction-payment/rpc/runtime-api/" }

ibc = { default-features = false, path = "../pallets/ibc", package = "pallet-ibc" }
template = { version = "2.0.0-rc5", default-features = false, path = "../pallets/template", package = "pallet-template" }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", path = "../../substrate/utils/wasm-builder-runner" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
  "frame-system-rpc-runtime-api/std",
	"ibc/std",
	"template/std",
]
