[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-template'
version = "2.0.0-dev"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet template"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

[dependencies.frame-support]
default-features = false
version = "2.0.0-dev"
path = "../../../substrate/frame/support"

[dependencies.frame-system]
default-features = false
version = "2.0.0-dev"
path = "../../../substrate/frame/system"

[dependencies.sp-core]
default-features = false
version = "2.0.0-dev"
path = "../../../substrate/primitives/core"

[dev-dependencies.sp-io]
default-features = false
version = "2.0.0-dev"
path = "../../../substrate/primitives/io"

[dev-dependencies.sp-runtime]
default-features = false
version = "2.0.0-dev"
path = "../../../substrate/primitives/runtime"

[dependencies.sp-std]
default-features = false
version = "2.0.0-dev"
path = "../../../substrate/primitives/std"

[dependencies.sp-finality-grandpa]
default-features = false
version = "2.0.0-dev"
path = "../../../substrate/primitives/finality-grandpa"

[dependencies.ibc]
default-features = false
package = 'pallet-ibc'
path = "../ibc"

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std'
]
